Fixed selectize spacing issue with bootstrap

--- a/app/assets/stylesheets/bootstrap-tweaks.scss
+++ b/app/assets/stylesheets/bootstrap-tweaks.scss
@@ -178,6 +178,10 @@ i.icon {
   padding-left: 0;
 }
 
+.selectize-input {
+  vertical-align: top;
+}
+
 input[type=number] {
   min-width: 60px;
 }
